# autoencoder-ppo-predator-prey

./: README.md
Real-World-Experiments/: Problems.md  README.md  arucogen.py  camera-test.py  cv2_utils.py  defishyeye.py  domain_randomization.py  eval.ipynb  eval.py  fps-result.ipynb  go-sky.py  image-post-processing.ipynb  main.py  position-gen.py  real_world2seg.py  run3rdRobots.bash  segment.py  segment2.py  segmentation-text.ipynb  segmentest copy 2.ipynb  segmentest copy.ipynb  segmentest.ipynb  sky-camera.py  topics.bash  upload2bots.bash
Real-World-Experiments/AutoEncoder/: ae.py  model_utils.py
Real-World-Experiments/camera-evaluation/: calibration.py  calibrator.py  go-sky.py  mergedata.ipynb  test.py
Real-World-Experiments/gym_env/: basic_predator_prey_gym.py  env_utils.py  robot.py
Real-World-Experiments/turtlebot/: runRobot.bash  segment.py  single-cam-test.py
Real-World-Experiments/turtlebot1/: default.xml  setup.bash
Real-World-Experiments/turtlebot2/: default.xml  setup.bash
Real-World-Experiments/turtlebot3/: default.xml  setup.bash
Simulation-Training/autoencoder-training/: ae.ipynb  ae.py  dataset.py  domain-randomization.ipynb  domain_randomization.py  model_utils.py  real_world.py  segment.py  test.ipynb  training.ipynb  vae.py  (+1 more)
Simulation-Training/ros2_ws/install/launch_gazebo/share/launch_gazebo/: package.ps1  package.sh  package.xml
Simulation-Training/ros2_ws/install/launch_gazebo/share/launch_gazebo/launch/: ignition.launch.py
Simulation-Training/ros2_ws/install/launch_gazebo/share/launch_gazebo/objects/: 4x4.sdf  robotWithCamera.sdf  turtlebot4-2.0.sdf  turtlebot4.sdf
Simulation-Training/ros2_ws/install/launch_gazebo/share/launch_gazebo/worlds/: 4x4.world
(+141 files in other folders)
