<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_gazebo</name>
  <version>0.0.0</version>
  <description>Launch the Gazebo Simulation for things</description>
  <maintainer email="henri_grotzeck@gmx.de">henri</maintainer>
  <license>TODO: License declaration</license>

  <!-- Turtlebot4 -->
  <depend>turtlebot4_description</depend>
  <depend>turtlebot4_msgs</depend>
  <depend>turtlebot4_navigation</depend>
  <depend>turtlebot4_node</depend>
  <depend>turtlebot4_viz</depend>
  <depend>turtlebot4_ignition_gui_plugins</depend>
  <depend>turtlebot4_ignition_toolbox</depend>
  <depend>turtlebot4_ignition_bringup</depend>

  <!-- Create3 -->
  <depend>irobot_create_description</depend>
  <depend>irobot_create_common_bringup</depend>
  <depend>irobot_create_nodes</depend>
  <depend>irobot_create_toolbox</depend>
  <depend>irobot_create_ignition_bringup</depend>
  <depend>irobot_create_ignition_toolbox</depend>

  <!-- ROS IGN -->
  <depend>ros_ign_interfaces</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>irobot_create_msgs</depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
